tests/NormalTests/paczka1/fuzzy1/85561270.err
Error in line 16: SuA9nvP A981 80,3
Error in line 18: YUF8a A801 0,2
Error in line 20: SuA9nvP A778 98,5
Error in line 34: P195km A801 53,3
